# FLTK

./: README.md
AVChat/: README.md
chat_client/: AppImage_README.md  CMakeLists.txt  ChatClient-1.0.0-x86_64.AppImage  Dockerfile  LICENSE  Makefile  README.md  chat_client  docker-compose.yml
chat_client/.github/workflows/: build-appimage.yml
chat_client/ChatClient.AppDir/: .DirIcon  AppRun  chat_client.desktop
chat_client/ChatClient.AppDir/data/config/: default.json
chat_client/ChatClient.AppDir/data/icons/: make_icon.sh
chat_client/ChatClient.AppDir/usr/share/applications/: chat_client.desktop
chat_client/ChatClient.AppDir/usr/share/metainfo/: chat_client.appdata.xml  com.movatalk.chat_client.appdata.xml
chat_client/build-appimage/: CMakeCache.txt
chat_client/cmake/: AppImageConfig.cmake  chat_client.appdata.xml.in  chat_client.desktop.in
chat_client/config/: device_streams.yaml
chat_client/data/icons/: make_icon.sh
chat_client/docs/: STREAMING_IMPLEMENTATION_GUIDE.md
chat_client/packaging/: README.md
chat_client/packaging/appimage/: README.md  docker-test-appimage.yml  test-appimage-in-docker.sh
chat_client/packaging/appstream/: README.md
chat_client/packaging/aur/: PKGBUILD
chat_client/packaging/debian/: control
chat_client/packaging/flatpak/: com.movatalk.ChatClient.json
chat_client/packaging/snap/: snapcraft.yaml
chat_client/scripts/: build.sh  build_appimage.sh  chat-client.service  cross_platform_test.sh  install_dependencies.sh  rtsp_stream_tester.py  test_audio_stream.sh
chat_client/src/: main.cpp  real_chat_client.cpp
chat_client/src/audio/: audio_engine.cpp  audio_engine.h
chat_client/src/core/: application.cpp  application.h  config_manager.cpp  config_manager.h
chat_client/src/gui/: audio_controls.cpp  audio_controls.h  chat_window.cpp  chat_window.h  main_window.cpp  main_window.h
chat_client/src/network/: protocol_manager.cpp  protocol_manager.h
chat_client/tests/: CMakeLists.txt
chat_client/tests/hardware/: arm64_test.cpp  x86_64_test.cpp
chat_client/tests/integration/: full_system_test.cpp
chat_client/tests/mock_build/: Makefile  chat_client_mock  mock_main.cpp
chat_client/tests/unit/: audio_tests.cpp
chat_client/toolchains/: arm64-linux.cmake  x86_64-linux.cmake
